# pg_fedi

./: CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  Makefile  README.md  pg_fedi.control
src/: activities.rs  actors.rs  admin.rs  crypto.rs  delivery.rs  guc.rs  lib.rs  nodeinfo.rs  schema.rs  serialization.rs  types.rs  util.rs  webfinger.rs
tests/: endpoint_test.sql  supabase_smoke.sql  supabase_test.sh
tests/pg_regress/sql/: setup.sql
