[package]
name = "pg_fedi"
version = "0.1.0"
edition = "2021"
authors = ["Cody Bromley"]
license = "Apache-2.0"
description = "A PostgreSQL extension that implements ActivityPub federation directly inside Postgres"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_fedi"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg15"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
signature = "2"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

# RSA key generation is extremely slow in debug mode without this
[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
